change dns policy

--- a/k8s/02-monitor/alloy-values.yaml
+++ b/k8s/02-monitor/alloy-values.yaml
@@ -39,7 +39,7 @@ controller:
   # This gives the pod the "glasses" to see the Host's network (Tailscale)
   hostNetwork: true
   # This tells K8s: "Try to find DNS in the cluster first; if you fail, ask the Host."
-  dnsPolicy: ClusterFirstWithHostNet
+  dnsPolicy: Default
 
 mounts:
   varlog: true
