--- a/k8s/02-monitor/alloy-values.yaml
+++ b/k8s/02-monitor/alloy-values.yaml
@@ -35,7 +35,9 @@ alloy:
 
 controller:
   type: daemonset
-  
+  # Add the Tailscale ProxyClass annotation
+  podAnnotations:
+    tailscale.com/proxy-class: "alloy-egress"
 
 mounts:
   varlog: true
