chang to debug log level

--- a/k8s/02-monitor/alloy-values.yaml
+++ b/k8s/02-monitor/alloy-values.yaml
@@ -3,7 +3,7 @@ alloy:
     create: true
     content: |
       logging {
-        level = "info"
+        level = "debug"
         format = "logfmt"
       }
 
