--- a/k8s/01-deploy/deployment.yaml
+++ b/k8s/01-deploy/deployment.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     app: tabletap
 spec:
-  # Start with 2 replicas for high availability
   replicas: 2
   selector:
     matchLabels:
@@ -14,41 +13,51 @@ spec:
     metadata:
       labels:
         app: tabletap
+      # OPTIONAL: Add this annotation to tell Alloy exactly what to scrape
+      # This stops it from trying to scrape port 80 and failing
+      annotations:
+        k8s.grafana.com/scrape: "true"
+        k8s.grafana.com/metrics.port: "9113"
     spec:
+      # 1. Define the Volume from the ConfigMap
+      volumes:
+        - name: nginx-conf
+          configMap:
+            name: nginx-config
+
       containers:
+      # --- MAIN CONTAINER (TableTap) ---
       - name: tabletap
-        # The image pushed by your CI/CD pipeline (must be lowercase)
         image: ghcr.io/kchenfs/tabletap:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
         
-        # Liveness Probe: Checks if the app is alive
-        # If this fails 3 times, Kubernetes will restart the pod
+        # 2. Mount the ConfigMap here!
+        volumeMounts:
+          - name: nginx-conf
+            mountPath: /etc/nginx/conf.d/default.conf
+            subPath: default.conf
+
+        # 3. Probes belong here (on the app listening on 80)
         livenessProbe:
           httpGet:
-            path: /  # Your app serves content at root, so this should work
+            path: /
             port: 80
-            httpHeaders:
-            - name: Host
-              value: localhost  # In case your app checks the Host header
-          initialDelaySeconds: 30  # Wait 30s after container starts
-          periodSeconds: 10        # Check every 10 seconds
-          timeoutSeconds: 5        # Wait 5s for response
-          failureThreshold: 3      # Restart after 3 failed checks
-          successThreshold: 1      # Consider healthy after 1 success
-        
-        # Readiness Probe: Checks if the app is ready to receive traffic
-        # If this fails, Kubernetes stops sending traffic to this pod (but doesn't restart it)
+          initialDelaySeconds: 10
+          periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /
             port: 80
-            httpHeaders:
-            - name: Host
-              value: localhost
-          initialDelaySeconds: 10  # Start checking after 10s
-          periodSeconds: 5         # Check every 5 seconds
-          timeoutSeconds: 3        # Wait 3s for response
-          failureThreshold: 3      # Mark unready after 3 failed checks
-          successThreshold: 1      # Mark ready after 1 success
+          initialDelaySeconds: 5
+          periodSeconds: 5
+
+      # --- SIDECAR CONTAINER (Exporter) ---
+      - name: nginx-exporter
+        image: nginx/nginx-prometheus-exporter:1.1.0
+        args:
+          - -nginx.scrape-uri=http://127.0.0.1:80/stub_status
+        ports:
+          - containerPort: 9113
+            name: metrics
