--- a/k8s/01-deploy/service.yaml
+++ b/k8s/01-deploy/service.yaml
@@ -1,13 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  # This name is crucial for the Ingress to target
   name: tabletap-service
+  namespace: default
+  # Add this label if your Alloy configuration looks for it
+  labels:
+    app: tabletap
 spec:
-  # Type: ClusterIP is mandatory when using an Ingress controller like Traefik
   type: ClusterIP
   selector:
     app: tabletap
   ports:
-  - port: 80
-    targetPort: 80 # This is the containerPort (Nginx default)
+    - name: web
+      port: 80
+      targetPort: 80
+    - name: metrics
+      port: 9113       # Alloy will scrape this port
+      targetPort: 9113
