--- a/k8s/01-deploy/deployment.yaml
+++ b/k8s/01-deploy/deployment.yaml
@@ -13,8 +13,7 @@ spec:
     metadata:
       labels:
         app: tabletap
-      # OPTIONAL: Add this annotation to tell Alloy exactly what to scrape
-      # This stops it from trying to scrape port 80 and failing
+      # Annotations to tell Alloy/Prometheus exactly where to look
       annotations:
         k8s.grafana.com/scrape: "true"
         k8s.grafana.com/metrics.port: "9113"
@@ -26,37 +25,49 @@ spec:
             name: nginx-config
 
       containers:
-      # --- MAIN CONTAINER (TableTap) ---
+      # --- MAIN CONTAINER (TableTap / Nginx) ---
       - name: tabletap
         image: ghcr.io/kchenfs/tabletap:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
         
-        # 2. Mount the ConfigMap here!
+        # 2. Mount the ConfigMap here so Nginx enables /stub_status
         volumeMounts:
           - name: nginx-conf
             mountPath: /etc/nginx/conf.d/default.conf
             subPath: default.conf
 
-        # 3. Probes belong here (on the app listening on 80)
+        # 3. Probes belong here (Checking the Main App)
         livenessProbe:
           httpGet:
             path: /
             port: 80
-          initialDelaySeconds: 10
+            httpHeaders:
+            - name: Host
+              value: localhost
+          initialDelaySeconds: 30
           periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        
         readinessProbe:
           httpGet:
             path: /
             port: 80
-          initialDelaySeconds: 5
+            httpHeaders:
+            - name: Host
+              value: localhost
+          initialDelaySeconds: 10
           periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
 
       # --- SIDECAR CONTAINER (Exporter) ---
       - name: nginx-exporter
         image: nginx/nginx-prometheus-exporter:1.1.0
         args:
+          # Tells exporter: "Read stats from local Nginx, expose on port 9113"
           - -nginx.scrape-uri=http://127.0.0.1:80/stub_status
         ports:
           - containerPort: 9113
