--- a/k8s/networking/traefik-config.yaml
+++ b/k8s/networking/traefik-config.yaml
@@ -25,8 +25,7 @@ spec:
       - "--certificatesresolvers.le-staging.acme.email=kchenfs@gmail.com"
       - "--certificatesresolvers.le-staging.acme.storage=/data/acme.json"
       - "--certificatesresolvers.le-staging.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
-      - "--certificatesresolvers.le-staging.acme.tlschallenge=true"
+      - "--certificatesresolvers.le-staging.acme.httpchallenge=true"
+      - "--certificatesresolvers.le-staging.acme.httpchallenge.entrypoint=web"
       - "--entrypoints.websecure.address=:8443"
       - "--entrypoints.web.address=:8000"
-      - "--entrypoints.web.http.redirections.entrypoint.to=websecure"
-      - "--entrypoints.web.http.redirections.entrypoint.scheme=https"
