--- a/.github/workflows/deploy-chatbot.yml
+++ b/.github/workflows/deploy-chatbot.yml
@@ -8,6 +8,8 @@ on:
     branches:
       - feature/take-stripe-integration
       - k3smigration
+    paths:
+    - 'dist/**'
     
   
   # Allows you to run this workflow manually from the Actions tab
